--- a/client/building.jade
+++ b/client/building.jade
@@ -14,10 +14,11 @@ template(name='buildings')
 template(name='building')
     .ui.padded.stackable.grid
         .ui.three.wide.column
-            a.ui.compact.button(href="/buildings")
+            a.ui.big.button(href="/buildings")
                 i.chevron.left.icon
-                +i name='apartment' classes='ui inline mini image'
-                |buildings
+                i.building.icon
+                //- +i name='apartment' classes='ui inline mini image'
+                |Buildings
             if is_dev
                 .ui.icon.input
                     i.home.icon
@@ -47,14 +48,16 @@ template(name='unit_card')
             //- a.ui.large.button(href="/unit/#{_id}")
             //-     i.yellow.right.chevron.icon
             div
-            +i name='rent'
+            //- +i name='rent'
+            i.dollar.icon
             each owners
                 .ui.basic.label
                     if image_id
                         img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
                     |#{first_name} #{last_name}
             div
-            +i name='home'
+            i.home.icon
+            //- +i name='home'
             each residents
                 .ui.basic.label
                     if image_id
