--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title gro
+    title GRO
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -58,5 +58,5 @@ template(name='mlayout')
 
 template(name='not_found')
     .ui.text.container
-        .ui.center.aligned.header not found
-        a.ui.button(href="/healthclub") check in
+        .ui.center.aligned.header Not Found
+        a.ui.button(href="/healthclub") Check In
