--- a/client/fields.jade
+++ b/client/fields.jade
@@ -3,8 +3,8 @@ template(name='color_edit')
         .field
             label 
                 if icon
-                    +i name=icon
-                    //- i.icon(class=icon)
+                    //- +i name=icon
+                    i.icon(class=icon)
                 if title
                     |#{title}
                 else if key
@@ -20,8 +20,8 @@ template(name='color_view')
         .field
             label 
                 if icon
-                    +i name=icon
-                    //- i.icon(class=icon)
+                    //- +i name=icon
+                    i.icon(class=icon)
                 if title
                     |#{title}
                 else if key
@@ -35,8 +35,8 @@ template(name='color_icon_edit')
     div
     .ui.small.inline.header
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         if title
             |#{title}
         else if key
@@ -52,8 +52,8 @@ template(name='icon_edit')
     .ui.right.icon.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if key
@@ -73,8 +73,8 @@ template(name='color_icon_view')
 template(name='icon_view')
     if field_value
         div
-        //- i.icon(class=field_value)
-        img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+        i.icon(class=field_value)
+        //- img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
 
 
 template(name='i')
@@ -100,8 +100,8 @@ template(name='link_edit')
         .field
             label 
                 if icon
-                    +i name=icon
-                    //- i.icon(class=icon)
+                    //- +i name=icon
+                    i.icon(class=icon)
                 |#{title}
             input.edit_url(type='url' value=field_value placeholder='url' autocomplete="off")
         // +call_watson mode='url'
@@ -112,8 +112,8 @@ template(name='link_view')
         div
         .ui.small.inline.header 
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             |#{title}
         a(href=field_value target='_window') #{field_value}
         img.ui.fluid.image(src=field_value)
@@ -139,8 +139,8 @@ template(name='pdf_edit')
     .ui.form
         .ui.inline.small.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -169,8 +169,8 @@ template(name='pdf_edit')
 template(name='pdf_view')
     if field_value
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         if title
             |#{title}
         //- else if key
@@ -185,8 +185,8 @@ template(name='image_edit')
     .ui.form
         .ui.inline.small.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -231,8 +231,8 @@ template(name='textarea_view')
         div
         .ui.inline.small.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -248,7 +248,8 @@ template(name='textarea_edit')
         .field
             label 
                 if icon
-                    +i name=icon classes='ui avatar image'
+                    i.icon(name=icon)
+                    //- +i name=icon classes='ui avatar image'
                 if title
                     |#{title}
                 else if label
@@ -266,7 +267,8 @@ template(name='html_edit')
         .field
             label 
                 if icon
-                    +i name=icon classes='ui avatar image'
+                    i.icon(name=icon)
+                    //- +i name=icon classes='ui avatar image'
                     //- i.icon(class=icon)
                 if title
                     |#{title}
@@ -288,8 +290,8 @@ template(name='html_view')
     if field_value
         div
         if icon
-            +i name=icon classes='ui avatar image'
-            //- i.icon(class=icon)
+            //- +i name=icon classes='ui avatar image'
+            i.icon(class=icon)
         //- if title
         //-     |#{title}
         //- else if key
@@ -335,8 +337,8 @@ template(name='text_edit')
     .ui.fluid.icon.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -351,8 +353,8 @@ template(name='slug_edit')
     .ui.fluid.icon.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -370,7 +372,8 @@ template(name='slug_view')
             div
             .ui.small.inline.header
                 if icon
-                    +i name=icon
+                    i.icon(class=icon)
+                    //- +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -398,7 +401,8 @@ template(name='text_view')
             div
             .ui.small.inline.header
                 if icon
-                    +i name=icon
+                    i.icon(class=icon)
+                    //- +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -417,8 +421,8 @@ template(name='parent_edit')
         .ui.small.inline.header
             |parent edit
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -452,7 +456,8 @@ template(name='phone_edit')
     .ui.fluid.input
         .ui.inline.small.header 
             if icon
-                +i name=icon
+                i.icon(class=icon)
+                //- +i name=icon
             if title
                 |#{title}
             else if label
@@ -470,7 +475,8 @@ template(name='phone_view')
             div
             .ui.small.inline.header
                 if icon
-                    +i name=icon
+                    i.icon(class=icon)
+                    //- +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -488,8 +494,8 @@ template(name='number_edit')
     .ui.fluid.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -505,8 +511,8 @@ template(name='number_view')
         div
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -523,8 +529,8 @@ template(name='karma_price_edit')
     .ui.fluid.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -538,8 +544,8 @@ template(name='karma_price_view')
         div
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -558,8 +564,8 @@ template(name='dollar_price_edit')
     .ui.fluid.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -574,8 +580,8 @@ template(name='dollar_price_view')
         div
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -613,8 +619,8 @@ template(name='date_view')
         div
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -646,7 +652,8 @@ template(name='time_view')
     if field_value
         .ui.inline.header
             if icon
-                +i name=icon
+                i.icon(class=icon)
+                //- +i name=icon
             if title
                 |#{title}
             else if key
@@ -660,7 +667,8 @@ template(name='datetime_edit')
         .field
             label 
                 if icon
-                    +i name=icon
+                    i.icon(class=icon)
+                    //- +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -689,8 +697,8 @@ template(name='array_edit')
     .ui.fluid.input
         .ui.small.inline.header
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             if title
                 |#{title}
             else if label
@@ -711,7 +719,8 @@ template(name='array_view')
         div
         .ui.inline.small.header
             if icon
-                +i name=icon
+                i.icon(class=icon)
+                //- +i name=icon
             if title
                 |#{title}
             else if label
@@ -763,8 +772,8 @@ template(name='children_view')
         .title
             .ui.inline.header
                 if icon
-                    +i name=icon
-                    //- i.icon(class=icon)
+                    //- +i name=icon
+                    i.icon(class=icon)
                 if title
                     |#{title}
                 else if label
@@ -823,8 +832,8 @@ template(name='youtube_edit')
 template(name='youtube_view')
     if field_value
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         .ui.embed(data-source="youtube" data-id=field_value)
 
         //- // iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -848,14 +857,14 @@ template(name='signature_edit')
 template(name='signature_view')
     .ui.small.header
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         | #{title}    
     img.ui.fluid.centered.rounded.image(src=field_value)
     if is_admin
         .ui.button.print_rules
             i.download.icon
-            |download PDF
+            |Download PDF
     //- .ui.icon.button.print_guest
     //-     i.download.icon
     //-     |Download Guest PDF
@@ -866,8 +875,8 @@ template(name='boolean_edit')
     div
     .ui.small.inline.header
         if icon
-            //- i.icon(class=icon)
-            +i name=icon classes='ui inline mini image'
+            i.icon(class=icon)
+            //- +i name=icon classes='ui inline mini image'
         if title
             |#{title}
         else if label
@@ -894,8 +903,8 @@ template(name='boolean_view')
     div
     .ui.small.inline.header
         if icon
-            //- i.icon(class=icon)
-            +i name=icon classes='ui inline mini image'
+            i.icon(class=icon)
+            //- +i name=icon classes='ui inline mini image'
         if title
             |#{title}
         else if label
@@ -913,14 +922,14 @@ template(name='single_doc_view')
     div
     if field_value
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         .ui.small.inline.header(title=key)
             |#{title}
         .ui.basic.label
             if icon
-                +i name=icon
-                //- i.icon(class=icon)
+                //- +i name=icon
+                i.icon(class=icon)
             |#{field_value}
 
 
@@ -928,8 +937,8 @@ template(name='single_doc_edit')
     div
     .ui.small.inline.header(title=key) 
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         |#{label} #{title}
     each choices
         .ui.small.circular.compact.button.select_choice(class=choice_class)
@@ -945,14 +954,14 @@ template(name='multi_doc_edit')
     div
     .ui.small.inline.header(title=key)
         if icon
-            +i name=icon classes='ui avatar image'
-            //- i.icon(class=icon)
+            //- +i name=icon classes='ui avatar image'
+            i.icon(class=icon)
         |#{title} #{label}    
     each choices
         .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
-                +i name=icon classes='ui avatar image'
-                //- i.icon(class=icon)
+                //- +i name=icon classes='ui avatar image'
+                i.icon(class=icon)
             //- |#{title} #{slug}
             |#{slug}
     //- .ui.sub.header 
@@ -1008,8 +1017,8 @@ template(name='single_user_edit')
     div
     .ui.inline.small.header 
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         |#{title}
     if field_value
         .pull_user.ui.button(title='remove user')
@@ -1106,8 +1115,8 @@ template(name='single_person_edit')
 template(name='multi_user_edit')
     .ui.small.inline.header
         if icon
-            +i name=icon
-            //- i.icon(class=icon)
+            //- +i name=icon
+            i.icon(class=icon)
         if title
             |#{title}
         else if label
