--- a/client/front.jade
+++ b/client/front.jade
@@ -135,17 +135,17 @@ template(name='healthclub_status')
     .ui.basic.segment
         .ui.inline.large.header
             +water_status slug='upper_hot_tub'
-            |upper hot tub
+            |Upper Hot Tub
         div
         .ui.inline.large.header
             +water_status slug='lower_hot_tub'
-            |lower hot tub
+            |Lower Hot Tub
         //- .ui.grey.inline.large.header
         //-     |100.2°
         div
         .ui.inline.large.header
             +water_status slug='pool'
-            |pool
+            |Pool
         //- .ui.grey.inline.header
         //-     |80.1°
 
