--- a/client/users.jade
+++ b/client/users.jade
@@ -70,7 +70,7 @@ template(name='user_Gallery')
 template(name='user_events')
     .ui.center.aligned.white.header 
         i.calendar.icon
-        |events
+        |Events
     .add_event.ui.button
         i.plus.icon
         |Event
@@ -98,7 +98,7 @@ template(name='user_contact_info')
     .shadowed-box
         .ui.header
             +i name='phone'
-            |contact
+            |CSontact
         .ui.icon.circular.button.toggle_edit
             if is_editing
                 i.green.checkmark.icon
@@ -117,10 +117,10 @@ template(name='user_contact_info')
                         i.external.icon
             .item created {{ from_now createdAt }}
         if is_editing
-            +user_field key='street' label='street'
-            +user_field key='city' label='city'
-            +user_field key='state' label='state'
-            +user_field key='zip' label='zip'
+            +user_field key='street' label='Street'
+            +user_field key='city' label='City'
+            +user_field key='state' label='State'
+            +user_field key='zip' label='Zip'
         else
             .ui.list
                 .item #{street}
@@ -134,8 +134,9 @@ template(name='users')
         .row
             .sixteen.wide.column
                 h1.ui.center.aligned.grey.header 
-                    +i name='groups'
-                    |users
+                    //- +i name='groups'
+                    i.users.icon
+                    |Users
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
                     input.username_search(type='text' placeholder='lookup name...')
